feat: simplify `SnomedDescriptionUtils.getLanguageRefSetIds(...)`