@@ -50,7 +50,6 @@ import com.b2international.snowowl.snomed.datastore.converter.SnomedConceptConve
 import com.b2international.snowowl.snomed.datastore.index.entry.SnomedConceptDocument;
 import com.b2international.snowowl.snomed.datastore.index.entry.SnomedDescriptionIndexEntry;
 import com.b2international.snowowl.snomed.datastore.index.entry.SnomedDocument;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 
 /**
@@ -235,7 +234,7 @@ public class SnomedConceptSearchRequest extends SnomedComponentSearchRequest<Sno
 			queryBuilder.filter(RevisionDocument.Expressions.ids(conceptScoreMap.keySet()));
 			
 			final Expression q = addSearchProfile(searchProfileQuery, queryBuilder.build());
-			queryExpression = Expressions.scriptScore(q, "doiFactor", ImmutableMap.of("termScores", conceptScoreMap, "useDoi", containsKey(OptionKey.USE_DOI), "minDoi", MIN_DOI_VALUE, "maxDoi", MAX_DOI_VALUE));
+			queryExpression = Expressions.scriptScore(q, "doiFactor", Map.of("termScores", conceptScoreMap, "useDoi", containsKey(OptionKey.USE_DOI), "minDoi", MIN_DOI_VALUE, "maxDoi", MAX_DOI_VALUE));
 		} else if (containsKey(OptionKey.USE_DOI)) {
 			final Expression q = addSearchProfile(searchProfileQuery, queryBuilder.build());
 			queryExpression = Expressions.scriptScore(q, "doi");
@@ -252,7 +251,7 @@ public class SnomedConceptSearchRequest extends SnomedComponentSearchRequest<Sno
 			SortField sortField = (SortField) sort;
 			if (SnomedConceptSearchRequestBuilder.TERM_SORT.equals(sortField.getField())) {
 				final Set<String> synonymIds = context.service(Synonyms.class).get();
-				final Map<String, Object> args = ImmutableMap.of("locales", SnomedDescriptionUtils.getLanguageRefSetIds(locales(), SnomedDescriptionUtils.getLanguageMapping(context)), "synonymIds", synonymIds);
+				final Map<String, Object> args = Map.of("locales", SnomedDescriptionUtils.getLanguageRefSetIds(context, locales()), "synonymIds", synonymIds);
 				sortBuilder.sortByScript("termSort", args, sort.isAscending() ? Order.ASC : Order.DESC);
 				return;
 			}
@@ -304,8 +303,7 @@ public class SnomedConceptSearchRequest extends SnomedComponentSearchRequest<Sno
 		
 		if (containsKey(SnomedConceptSearchRequest.OptionKey.LANGUAGE_REFSET)) {
 			List<ExtendedLocale> extendedLocales = getList(SnomedDescriptionSearchRequest.OptionKey.LANGUAGE_REFSET, ExtendedLocale.class);
-			
-			requestBuilder.filterByLanguageRefSets(SnomedDescriptionUtils.getLanguageRefSetIds(extendedLocales, SnomedDescriptionUtils.getLanguageMapping(context)));
+			requestBuilder.filterByLanguageRefSets(SnomedDescriptionUtils.getLanguageRefSetIds(context, extendedLocales));
 		}
 			
 		applyIdFilter(requestBuilder, (rb, ids) -> rb.filterByConceptId(ids));
